Formatting and removed unused pics.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</div>
 	-->
 
-	<!-------------------- WELCOME -------------------->
+<!-------------------- INTRODUCTION -------------------->
 
 		<div class="headingBar">
 			<h1 class="heading"><span id="intro"></span>Introduction</h1>
@@ -473,7 +473,7 @@
 			</div>
 
 			<div class="board">
-				<img src="pics/Kenneth Xiao square.jpg" height="216" width="216" class="officer">
+				<img src="pics/ken.jpg" height="216" width="216" class="officer">
 				<p>Kenny Xiao</p>
 				<p><em>VP-Finance</em></p>
 				<p>Phi Gamma Delta</p>
